--- a/src/components/rightpanel/rightpanel.module.css
+++ b/src/components/rightpanel/rightpanel.module.css
@@ -23,6 +23,7 @@
     height: 100%;
     overflow: hidden;
     overflow-y: scroll;
+    scroll-behavior: smooth;
     /* 
     Custom Scroll Bar
     */
