--- a/src/components/NavBar/SideNavBar/sidenav.module.css
+++ b/src/components/NavBar/SideNavBar/sidenav.module.css
@@ -6,14 +6,64 @@
     display: flex;
     align-items: center;
     text-align: center;
+    border-radius: 60px;
+}
+
+@property --angle {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+}
+
+@property --angle_color {
+    syntax: "<angle_color>";
+    initial-value: green;
+    inherits: false;
+}
+
+.sidebar_content_bg {
+    border-radius: 60px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    /* background-image: conic-gradient(red, green, yellow, cyan); */
+    background-image: conic-gradient(from var(--angle), transparent 20%, var(--angle_color));
+    position: relative;
+    animation: 3s spin_border linear infinite;
+}
+
+@keyframes spin_border {
+    from {
+        --angle: 0deg;
+        --angle_color: green;
+    }
+    to {
+        --angle: 360deg;
+        --angle_color: blue;
+    }
 }
 
 .sidebar_content {
     background-color: var(--background-secondary-color);
+    width: 100%;
     padding: 10px 0px;
-    margin: 0px;
+    margin: 3px;
     border-radius: 60px;
+    position: relative;
 }
+
+/* .sidebar_content::before {
+    content: '';
+    background-image: conic-gradient(red, green);
+    opacity: 0.5;
+    top: 0;
+    left: -3px;
+    width: 100%;
+    height: 100%;
+    border-radius: 60px;
+    position: absolute;
+    z-index: -1;
+} */
 
 .menu {
     width: 100%;
