--- a/src/components/rightpanel/rightpanel.module.css
+++ b/src/components/rightpanel/rightpanel.module.css
@@ -85,7 +85,8 @@ section {
 
 section > .title {
     padding: 0px 0px;
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
+    margin-bottom: 11px;
     position: relative;
     z-index: 2;
 }
