Add title text effect

--- a/src/components/rightpanel/rightpanel.module.css
+++ b/src/components/rightpanel/rightpanel.module.css
@@ -117,12 +117,23 @@ section > .title > label {
 }
 
 section > .title > span {
-    position: absolute;
+    /* position: absolute;
     top: 24px;
     left: 51px;
     font-size: 45px;
     filter: blur(2px);
     color: #646464;
     font-weight: 700;
-    z-index: -2;
+    z-index: -2; */
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    font-size: 50px;
+    filter: blur(2px);
+    color: #646464;
+    font-weight: 700;
+    z-index: -1;
+    -webkit-text-fill-color: #00000000;
+    -webkit-text-stroke: 1px;
+    -webkit-font-smoothing: antialiased;
 }
