--- a/src/pages/experience/experience.css
+++ b/src/pages/experience/experience.css
@@ -1,7 +1,7 @@
 /*
 *
 * ==========================================
-* CUSTOM UTIL CLASSES
+* CUSTOM UTIL CLASSES NOT IN USE
 * ==========================================
 *
 */
