--- a/src/components/leftpanel/leftpanel.module.css
+++ b/src/components/leftpanel/leftpanel.module.css
@@ -28,6 +28,8 @@
     width: 100%;
     min-height: 100%;
     background-color: red;
+    background-position: top;
+    background-size: cover;
 }
 
 .leftpanel_card > .content > .text {
@@ -37,11 +39,15 @@
     right: 0;
     width: 100%;
     min-height: 40%;
-    background-color: rgb(0, 51, 255);
+    /* background-color: rgb(0, 51, 255); */
+    /* background-image: conic-gradient(from 270deg, transparent 0%, rgb(124, 245, 111)); */
+    background: linear-gradient(180deg,rgba(4,25,29,3%) 0%,rgb(1 9 15/90%) 100%) !important;
+    backdrop-filter: blur(8px);
 }
 
 .leftpanel_card > .content > .text:before {
     backdrop-filter: blur(8px);
+    /* background-color: linear-gradient(180deg,rgba(4,25,29,0) 0%,rgb(1 9 15/90%) 100%) !important; */
 }
 
 .leftpanel_card > .content > .text > .title {
